[project]
name = "piu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "kaggle>=1.6.17",
    "matplotlib>=3.9.2",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "torch>=2.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/piu"]
